# website-crawler

./: .gitignore  README.md  crawler.py  pyproject.toml
.github/: copilot-instructions.md
crawls/: holk_no_20251230_143223.json  results-oppslag-30122025_1422.json  results.json
src/crawler/: __init__.py  __main__.py  cli.py  core.py
tests/: __init__.py
